Change in GNU Prolog version 1.2.8:
 
* space_args(true) now displays a space inside {}/1
* space_args(true) now displays a space after a comma (','/2)

Change in GNU Prolog version 1.2.7:

* add a --foreign-only to pl2wam
* foreign/2 directives are ignored in byte-code mode (no fatal error)
* space_args(true) now displays space between operators and arguments
* add CVS $Id$ to prolog files
* get rid of mktemp and tempnam calls (use mkstemp if available)
* fix bug in pl2wam to include break/0, trace/0,... in bip_list.pl
* fix a bug in fd_element_var/3 constraint
* fix bug in fd headers (fd_to_c.h not installed)
* fix a bug with unify_with_occurs_check/2
* fix bug on ix86 using ebp (add -fomit-frame-pointer in CFLAGS_MACHINE)

Change in GNU Prolog version 1.2.6:

* fix a bug with ! in dynamic code
* fix a bug in arithmetics

Change in GNU Prolog version 1.2.5:

* big modification (1 month) to optimize the execution speed

Change in GNU Prolog version 1.2.4:

* implement fast call (mainly for WAM functions)
* modify C->Prolog foreign interface to recover arguments space
* improve dynamic clause management and fix a bug (memory leak)
* fix _ symbol prefix problem for Free BSD
* no longer use dl_malloc on Linux but prevent MMAP using mallopt

Change in GNU Prolog version 1.2.3:

* added acos/asin to Prolog arithmetics
* full re-indentation of the sources for CVS

Change in GNU Prolog version 1.2.2:

* port to alpha/linux - many thanks to: Alexander Diemand <ax@apax.net>
* port to alpha/OSF1
* port to mips/irix - many thanks to: Alexander Diemand <ax@apax.net>
* fix a bug in stty.c (use standard termios if present)

Change in GNU Prolog version 1.2.1:

* fix a bug in stty.c (use termio by default and else termios)

Change in GNU Prolog version 1.2.0:

* official release (Fri Jul 28)

Change in GNU Prolog version 1.1.7:

* port for ix86/NetBSD - many thanks to: Brook Milligan <brook@nmsu.edu>
* more customizable configuration/installation procedure
