@@ -30,7 +30,6 @@
 #define HAVE_MMAP 1
 #define HAVE_MALLOPT 1
 #define HAVE_MKSTEMP 1
-#define NO_USE_EBP 1
 #define NO_USE_GUI_CONSOLE 1
 #define M_ix86 1
 #define M_linux 1
@@ -38,7 +37,7 @@
 #define PROLOG_NAME1               "gprolog"
 #define PROLOG_NAME                "GNU Prolog"
 #define PROLOG_VERSION             "1.2.8"
-#define PROLOG_DATE                "Sep 28 2001"
+#define PROLOG_DATE                "Oct 8 2001"
 #define PROLOG_COPYRIGHT           "Copyright (C) 1999-2001 Daniel Diaz"
 #define TOP_LEVEL                  "gprolog"
 #define GPLC                       "gplc"
@@ -49,8 +48,8 @@
 #define M_OS                       "linux-gnu"
 #define CC                         "gcc"
 #define CFLAGS_PREFIX_REG          "-ffixed-%s"
-#define CFLAGS                     "-g -Wall"
-#define CFLAGS_MACHINE             "-mpentiumpro"
+#define CFLAGS                     "-O3 "
+#define CFLAGS_MACHINE             "-mpentiumpro -fomit-frame-pointer"
 #define LDFLAGS                    ""
 #define LDLIBS                     "-lm"
 #define AS                         "as"
@@ -194,17 +193,17 @@ typedef int Bool;
 #endif
 #endif /* !_BOOL_H */
 #define MAP_REG_TR        	"ebx"
-#define MAP_OFFSET_B     	((NB_OF_X_REGS+0)*4)
-#define MAP_OFFSET_H     	((NB_OF_X_REGS+1)*4)
-#define MAP_OFFSET_HB1   	((NB_OF_X_REGS+2)*4)
-#define MAP_OFFSET_CP    	((NB_OF_X_REGS+3)*4)
-#define MAP_OFFSET_E     	((NB_OF_X_REGS+4)*4)
-#define MAP_OFFSET_CS    	((NB_OF_X_REGS+5)*4)
-#define MAP_OFFSET_S     	((NB_OF_X_REGS+6)*4)
-#define MAP_OFFSET_STAMP 	((NB_OF_X_REGS+7)*4)
-#define MAP_OFFSET_BCI   	((NB_OF_X_REGS+8)*4)
-#define MAP_OFFSET_LSSA  	((NB_OF_X_REGS+9)*4)
-#define CFLAGS_REGS		"-ffixed-ebx "
+#define MAP_REG_B         	"ebp"
+#define MAP_OFFSET_H     	((NB_OF_X_REGS+0)*4)
+#define MAP_OFFSET_HB1   	((NB_OF_X_REGS+1)*4)
+#define MAP_OFFSET_CP    	((NB_OF_X_REGS+2)*4)
+#define MAP_OFFSET_E     	((NB_OF_X_REGS+3)*4)
+#define MAP_OFFSET_CS    	((NB_OF_X_REGS+4)*4)
+#define MAP_OFFSET_S     	((NB_OF_X_REGS+5)*4)
+#define MAP_OFFSET_STAMP 	((NB_OF_X_REGS+6)*4)
+#define MAP_OFFSET_BCI   	((NB_OF_X_REGS+7)*4)
+#define MAP_OFFSET_LSSA  	((NB_OF_X_REGS+8)*4)
+#define CFLAGS_REGS		"-ffixed-ebx -ffixed-ebp "
 typedef long WamWord;		/* a wamword is a long (32/64 bits) */
 typedef void (*CodePtr) ();	/* a code pointer is a ptr to fct */
 typedef CodePtr WamCont;	/* a continuation is a code pointer */
@@ -213,21 +212,21 @@ typedef CodePtr WamCont;	/* a continuation is a code pointer */
 #define A(a)                       (reg_bank[a])
 typedef WamWord *WamWordP;
 register WamWordP		TR  asm ("ebx");
-#define B			(((WamWordP *) reg_bank)[NB_OF_X_REGS+0])
-#define H			(((WamWordP *) reg_bank)[NB_OF_X_REGS+1])
-#define HB1			(((WamWordP *) reg_bank)[NB_OF_X_REGS+2])
-#define CP			(((WamCont  *) reg_bank)[NB_OF_X_REGS+3])
-#define E			(((WamWordP *) reg_bank)[NB_OF_X_REGS+4])
-#define CS			(((WamWordP *) reg_bank)[NB_OF_X_REGS+5])
-#define S			(((WamWordP *) reg_bank)[NB_OF_X_REGS+6])
-#define STAMP			(((WamWord  *) reg_bank)[NB_OF_X_REGS+7])
-#define BCI			(((WamWord  *) reg_bank)[NB_OF_X_REGS+8])
-#define LSSA			(((WamWordP *) reg_bank)[NB_OF_X_REGS+9])
+register WamWordP		B   asm ("ebp");
+#define H			(((WamWordP *) reg_bank)[NB_OF_X_REGS+0])
+#define HB1			(((WamWordP *) reg_bank)[NB_OF_X_REGS+1])
+#define CP			(((WamCont  *) reg_bank)[NB_OF_X_REGS+2])
+#define E			(((WamWordP *) reg_bank)[NB_OF_X_REGS+3])
+#define CS			(((WamWordP *) reg_bank)[NB_OF_X_REGS+4])
+#define S			(((WamWordP *) reg_bank)[NB_OF_X_REGS+5])
+#define STAMP			(((WamWord  *) reg_bank)[NB_OF_X_REGS+6])
+#define BCI			(((WamWord  *) reg_bank)[NB_OF_X_REGS+7])
+#define LSSA			(((WamWordP *) reg_bank)[NB_OF_X_REGS+8])
 #define NB_OF_REGS          	11
-#define NB_OF_ALLOC_REGS    	1
-#define NB_OF_NOT_ALLOC_REGS	10
+#define NB_OF_ALLOC_REGS    	2
+#define NB_OF_NOT_ALLOC_REGS	9
 #define REG_BANK_SIZE       	(NB_OF_X_REGS+NB_OF_NOT_ALLOC_REGS)
-#define NB_OF_USED_MACHINE_REGS 1
+#define NB_OF_USED_MACHINE_REGS 2
 #ifdef ENGINE_FILE
 WamWord reg_bank[REG_BANK_SIZE];
 WamWord buff_signal_reg[NB_OF_USED_MACHINE_REGS + 1];
@@ -280,12 +279,16 @@ extern char *reg_tbl[];
 #define Save_Machine_Regs(buff_save) \
   do { \
     register long reg0 asm ("ebx"); \
+    register long reg1 asm ("ebp"); \
     buff_save[0] = reg0; \
+    buff_save[1] = reg1; \
   } while(0)
 #define Restore_Machine_Regs(buff_save) \
   do { \
     register long reg0 asm ("ebx"); \
+    register long reg1 asm ("ebp"); \
     reg0 = buff_save[0]; \
+    reg1 = buff_save[1]; \
   } while(0)
 #define Start_Protect_Regs_For_Signal \
   do { \
