@@ -3,15 +3,15 @@
 #include "gp_config.h"
 
 #define MAP_REG_TR        	"ebx"
-#define MAP_OFFSET_B     	((NB_OF_X_REGS+0)*4)
-#define MAP_OFFSET_H     	((NB_OF_X_REGS+1)*4)
-#define MAP_OFFSET_HB1   	((NB_OF_X_REGS+2)*4)
-#define MAP_OFFSET_CP    	((NB_OF_X_REGS+3)*4)
-#define MAP_OFFSET_E     	((NB_OF_X_REGS+4)*4)
-#define MAP_OFFSET_CS    	((NB_OF_X_REGS+5)*4)
-#define MAP_OFFSET_S     	((NB_OF_X_REGS+6)*4)
-#define MAP_OFFSET_STAMP 	((NB_OF_X_REGS+7)*4)
-#define MAP_OFFSET_BCI   	((NB_OF_X_REGS+8)*4)
-#define MAP_OFFSET_LSSA  	((NB_OF_X_REGS+9)*4)
+#define MAP_REG_B         	"ebp"
+#define MAP_OFFSET_H     	((NB_OF_X_REGS+0)*4)
+#define MAP_OFFSET_HB1   	((NB_OF_X_REGS+1)*4)
+#define MAP_OFFSET_CP    	((NB_OF_X_REGS+2)*4)
+#define MAP_OFFSET_E     	((NB_OF_X_REGS+3)*4)
+#define MAP_OFFSET_CS    	((NB_OF_X_REGS+4)*4)
+#define MAP_OFFSET_S     	((NB_OF_X_REGS+5)*4)
+#define MAP_OFFSET_STAMP 	((NB_OF_X_REGS+6)*4)
+#define MAP_OFFSET_BCI   	((NB_OF_X_REGS+7)*4)
+#define MAP_OFFSET_LSSA  	((NB_OF_X_REGS+8)*4)
 
-#define CFLAGS_REGS		"-ffixed-ebx "
+#define CFLAGS_REGS		"-ffixed-ebx -ffixed-ebp "
